Bug 1742990 - Disconnect after-paint listener, r=gfx-reviewers,lsalzman

In rare cases a `NativeLayerRootWayland` gets destroyed while the
connected `GdkFrameClock` is still in use. This apparently happens
after a fallback from HW-WR to SW-WR.

The current architecture here is a bit problematic - things can
change below our feet. Thus just try to disconnect the signal
if easily possible.

Differential Revision: https://phabricator.services.mozilla.com/D134792